# django-translate

./: README.md  _translations.py  constants.py  deepl_translate.py  main.py  openapi.yaml  pyproject.toml  translate.py  update_po.py  update_po_from_another_po.py
